Se add la conf de la bd local postgres y se arregló el crud para users

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 3001
-DATABASE_HOST = ep-white-boat-a5qxd7kj.us-east-2.aws.neon.tech
+DATABASE_HOST = localhost
 DATABASE_PORT = 5432
-DATABASE_USERNAME = repairmotodb_owner
-DATABASE_PASSWORD = T7Nd4RkZyHPU
-DATABASE_DATABASE = repairmotodb
+DATABASE_USERNAME = postgres
+DATABASE_PASSWORD = 'Em4071995#'
+DATABASE_DATABASE = repairmotosdb
