--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DATABASE_PORT = 5432
 DATABASE_USERNAME = postgres
 DATABASE_PASSWORD = 'Em4071995#'
 DATABASE_DATABASE = repairmotosdb
+JWT_SEED = RXN0b3kgZW4gbGEgZ2VuIDM3
