Change name project

--- a/.env
+++ b/.env
@@ -2,12 +2,14 @@ PORT = 3001
 DATABASE_HOST = localhost
 DATABASE_PORT = 5432
 DATABASE_USERNAME = postgres
-DATABASE_PASSWORD = 'Em4071995#'
+DATABASE_PASSWORD = Emapostgres07
 DATABASE_DATABASE = repairmotosdb
 
 JWT_SEED = RXN0b3kgZW4gbGEgZ2VuIDM3
 
-SEND_EMAIL =false
 MAILER_SERVICE =gmail
 MAILER_EMAIL =pruebadev177@gmail.com
 MAILER_SECRET_KEY =vtmrjgspcpuenggm
+SEND_EMAIL = true
+
+WEBSERVICE_URL = http://localhost:3001/api/v1
