--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DATABASE_USERNAME = postgres
 DATABASE_PASSWORD = Emapostgres07
 DATABASE_DATABASE = repairmotosdb
 
-JWT_SEED = RXN0b3kgZW4gbGEgZ2VuIDM3
+JWT_SEED =RXN0b3kgZW4gbGEgZ2VuIDM3
 
 MAILER_SERVICE =gmail
 MAILER_EMAIL =pruebadev177@gmail.com
